# hass-migrate

./: .env  .env.example  AGENTS.md  README.md  hello.py  migration_progress.json  pyproject.toml  pytest.ini  test_imports.py
.github/: copilot-instructions.md
hass_migrate/: __init__.py  config.py
hass_migrate/cli/: __init__.py  constants.py  migrate.py  options.py  schema.py  utils.py  validate.py
hass_migrate/database/: __init__.py  mysql_client.py  pg_client.py
hass_migrate/models/: table_metadata.py
hass_migrate/schema/: postgres_schema.sql  postgres_schema_optimized.sql  postgres_schema_timescaledb.sql
hass_migrate/services/: backup_service.py  migration_service.py  validation_service.py
hass_migrate/utils/: __init__.py  data_cleaner.py  dependency.py  logger.py
migrate/: __init__.py  cli.py  config.py  engine.py  exceptions.py
migrate/cli/: __init__.py  constants.py  migrate.py  options.py  schema.py  utils.py  validate.py
migrate/database/: mysql_client.py  pg_client.py
migrate/models/: __init__.py  table_metadata.py
migrate/schema/: postgres_schema.sql  schema.sql
migrate/services/: __init__.py  backup_service.py  migration_service.py  validation_service.py
migrate/utils/: data_cleaner.py  dependency.py  logger.py  progress_tracker.py
tests/: __init__.py  conftest.py  test_config.py  test_data_cleaner.py  test_dependency.py  test_e2e.py  test_exceptions.py  test_migration_service.py  test_pg_client.py  test_table_metadata.py
