[project]
name = "migrate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "mysql-connector-python>=9.5.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer[all]>=0.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
hamigrate = "migrate.cli:app"

[tool.uv]
package = true
